--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.shahriar.jBanglaDate</groupId>
-	<artifactId>jBanglaDate</artifactId>
+	<groupId>io.shahriar.jbangladate</groupId>
+	<artifactId>jbangladate</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>jBanglaDate</name>
+	<name>jbangladate</name>
 	<description>Bangla Date Representation in Java</description>
 		<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,4 +36,11 @@
 			<version>4.12</version>
 		</dependency>
 	</dependencies>
+	<organization>
+		<name>shahriar.io</name>
+		<url>http://www.shahriar.io/</url>
+	</organization>
+	<scm>
+		<url>https://github.com/shahriar-io/jBanglaDate.git</url>
+	</scm>
 </project>
